# percent

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  alembic.ini  cloudbuild.yaml  db.sh  doc.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
alembic/: env.py
alembic/versions/: 396bddedb767_add_role_field_to_user_model.py  9749b607229c_add_country_code.py  a9c36e59e74a_use_date_data_with_now_default.py  b6190175b140_init.py  cd7301fffe4a_add_present_option_for_end_date.py  de2ad612ceb3_add_city.py  e5fe48b2286b_split_country_column_values.py
config/: config.py
models/: models.py
repositories/: login.py  residence_repo.py  user_repo.py
routers/: login.py  residence.py  user.py
schemas/: schemas.py
static/: countries.csv
static/js/: utility.js
templates/: base.html  card.html  dashboard.html  edit_residence.html  image.html  index.html  login.html  map.html  navbar.html  new_residence.html  residence.html  residence_details.html  user_register.html
tests/: test_endpoints.py  test_plots.py  test_schemas.py
utility/: helper.py
webapps/: diagram.py  residences.py
